--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@ body{
   font-family: "Arial";
 }
 
-.main-content p {
+.main-content p, .main-content ul, .main-content ol {
   font-family: "tahoma";
 }
 
