--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,7 @@ body{
   direction:rtl;
   text-align:right;
   font-family: "Arial";
+  line-height:1.8;
 }
 
 .main-content p, .main-content ul, .main-content ol {
